SFDCProject/src/objects/Install_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Auditor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auditor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Install Audits (Auditor Account)</relationshipLabel>
        <relationshipName>Install_Audits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auditor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auditor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Install Audits</relationshipLabel>
        <relationshipName>Install_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Install_Audits_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corporate_Metric__c</fullName>
        <label>Corporate Metric</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_Missing__c</fullName>
        <label>Criteria Missing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Denied_Reason__c</fullName>
        <label>Denied Reason</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EPC_Discrepancies__c</fullName>
        <label>EPC Discrepancies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generation_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Generation Asset</label>
        <referenceTo>Generation_Assets__c</referenceTo>
        <relationshipLabel>Install Audits</relationshipLabel>
        <relationshipName>Install_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Install_Audit_Type__c</fullName>
        <label>Audit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Onsite</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Install Audits</relationshipLabel>
        <relationshipName>Install_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_Photos_Uploaded__c</fullName>
        <label>Number of Active Photos Uploaded</label>
        <summaryFilterItems>
            <field>SR_Audit_Attachment__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SR_Audit_Attachment__c.InstallAudit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Photos_Uploaded__c</fullName>
        <label>Number of Photos Uploaded</label>
        <summaryForeignKey>SR_Audit_Attachment__c.InstallAudit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Onsite_Audit__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Onsite Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Metric__c</fullName>
        <label>Partner Metric</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Criteria_Missed__c</fullName>
        <label>Priority Criteria Missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_Criteria_Missing__c</fullName>
        <label>Priority Criteria Missing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_New__c</fullName>
        <formula>Total_Points_Accrued__c * 100 / Total_Points_Possible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score (New)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Install Audits</relationshipLabel>
        <relationshipName>Install_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Date__c</fullName>
        <label>Site Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unassigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Substantial_Fails__c</fullName>
        <label>Substantial Fails</label>
        <summaryFilterItems>
            <field>Audit_Feedback__c.QA_Score__c</field>
            <operation>equals</operation>
            <value>Substantial Fail</value>
        </summaryFilterItems>
        <summaryForeignKey>Audit_Feedback__c.Install_Audit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Points_Accrued__c</fullName>
        <label>Total Points Accrued</label>
        <summarizedField>Audit_Feedback__c.Point_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Audit_Feedback__c.QA_Score__c</field>
            <operation>equals</operation>
            <value>Pass</value>
        </summaryFilterItems>
        <summaryForeignKey>Audit_Feedback__c.Install_Audit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Points_Possible__c</fullName>
        <label>Total Points Possible</label>
        <summarizedField>Audit_Feedback__c.Point_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Audit_Feedback__c.QA_Score__c</field>
            <operation>notEqual</operation>
            <value>Missing</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Audit_Feedback__c.QA_Score__c</field>
            <operation>notEqual</operation>
            <value>N/A</value>
        </summaryFilterItems>
        <summaryForeignKey>Audit_Feedback__c.Install_Audit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Install Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Install Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>